<resources>
    <string name="app_name">MiniApp1</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Toolbar -->
    <string name="menu_home">Home</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_message">Message</string>


    <string name="home_second">Home Second</string>

    <!-- Home -->
    <string name="course_name">PBD2020</string>
    <string name="application_name">Android Mini App 1</string>
    <string name="uni_logo_description">UniLogo</string>

    <!-- Message -->
    <string name="txt_share">Share</string>
    <string name="btn_email">SEND GROUP EMAIL</string>
    <string name="btn_mms">SEND GROUP MMS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="blank_fragment">THIS FRAGMENT IS BLANK...FOR NOW</string>
    <string name="contact_name">Example Name</string>
</resources>
